--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-HOST="http://localhost:8000"
+HOST_NAME="http://localhost:8000"
 USERNAME="AKIAIOSFOLQUICKSTART"
 PASSWORD="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
